--- a/SVM_Classification.ipynb
+++ b/SVM_Classification.ipynb
@@ -1,19 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "dcde3191",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
-   ]
-  }
- ],
+ "cells": [],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
